test/langtools/tools/javac/annotations/typeAnnotations/failures/AnnotationVersion.out
AnnotationVersion.java:12:27: compiler.err.type.annotations.not.supported.in.source: 1.6
1 error
